--- a/sensors/template/hvac_sensors.yaml
+++ b/sensors/template/hvac_sensors.yaml
@@ -250,6 +250,7 @@
     unique_id: house_heat_loss_kw
     unit_of_measurement: "kW"
     state_class: "measurement"
+    device_class: power
     icon: mdi:fire
     
     # availability: >-
@@ -264,21 +265,23 @@
     #   {{ flow_ok and t_sup_ok and t_ret_ok and cp_ok and rho_ok }}
       
     state: >-
-      {% set flow_lpm = states('sensor.hvac_buffer_tank_flow_rate') | float(0) %}
-      {% set t_sup_f = states('sensor.hvac_buffer_tank_supply_temperature') | float(0) %}
-      {% set t_ret_f = states('sensor.hvac_buffer_tank_return_temperature') | float(0) %}
+        {% set result_kw = states('input_number.hvac_thermal_power_used') | float(0) %}
+        {{ result_kw / 1000.0 | round(2) }}
 
-      {% set cp_fluid = states('input_number.cx_fluid_specific_heat') | float(3.95) %}
-      {% set rho_fluid = states('input_number.cx_fluid_density') | float(970) %}
+#      {% set flow_lpm = states('sensor.hvac_buffer_tank_flow_rate') | float(0) %}
+#      {% set t_sup_f = states('sensor.hvac_buffer_tank_supply_temperature') | float(0) %}
+#      {% set t_ret_f = states('sensor.hvac_buffer_tank_return_temperature') | float(0) %}
+#
+#      {% set cp_fluid = states('input_number.cx_fluid_specific_heat') | float(3.95) %}
+#      {% set rho_fluid = states('input_number.cx_fluid_density') | float(970) %}
 
-      {# Convert L/min to kg/s: flow[L/min] * density[kg/m³] / 60000 #}
-      {% set flow_factor = 0.00001667 %}
-      {% set delta_t_c = (t_sup_f - t_ret_f) / 1.8 %}
-
-      {% set mass_flow_rate_kg_s = flow_lpm * flow_factor * rho_fluid %}
-      {% set result_kw = mass_flow_rate_kg_s * cp_fluid * delta_t_c %}
-
-      {{ result_kw | round(2) }}
+#      {# Convert L/min to kg/s: flow[L/min] * density[kg/m³] / 60000 #}
+#      {% set flow_factor = 0.00001667 %}
+#      {% set delta_t_c = (t_sup_f - t_ret_f) / 1.8 %}
+#
+#      {% set mass_flow_rate_kg_s = flow_lpm * flow_factor * rho_fluid %}
+#      {% set result_kw = mass_flow_rate_kg_s * cp_fluid * delta_t_c %}
+#
 
   - name: "House Projected Max Heat Loss (kW)"
     unique_id: "house_projected_max_heat_loss_kw"
