--- a/sensors/template/cx_trigger_sensors.yaml
+++ b/sensors/template/cx_trigger_sensors.yaml
@@ -94,7 +94,7 @@
     - name: "Heat Pump Run Start Energy Input"
       unique_id: heat_pump_run_start_energy_input
       unit_of_measurement: "kWh"
-      state_class: measurement
+      state_class: total
       device_class: energy
       state: >
         {{ states('sensor.heat_pump_input_power_interval_kwh') | float(0) }}
@@ -102,7 +102,7 @@
     - name: "Heat Pump Run Start Energy Output"
       unique_id: heat_pump_run_start_energy_output
       unit_of_measurement: "kWh"
-      state_class: measurement
+      state_class: total
       device_class: energy
       state: >
         {{ states('sensor.heat_pump_output_power_interval_kwh') | float(0) }}
@@ -118,7 +118,7 @@
     unique_id: heat_pump_last_run_energy_input
     unit_of_measurement: "kWh"
     device_class: energy
-    state_class: measurement
+    state_class: total
     icon: mdi:lightning-bolt
     state: >
       {% set end_energy = states('sensor.heat_pump_input_power_interval_kwh') | float(0) %}
@@ -129,7 +129,7 @@
     unique_id: heat_pump_last_run_energy_output
     unit_of_measurement: "kWh"
     device_class: energy
-    state_class: measurement
+    state_class: total
     icon: mdi:fire
     state: >
       {% set end_energy = states('sensor.heat_pump_output_power_interval_kwh') | float(0) %}
